crates/sui-rpc-api/tests/snapshots/ledger_history_pins__walk__transactions__limit1_asc.snap
---
source: crates/sui-rpc-api/tests/ledger_history_pins.rs
expression: transcript
---
== page 0 ==
#0 item tx_seq=0 | wm.cursor=item(cp=0,tx=0) wm.cp=- | end=QUERY_END_REASON_ITEM_LIMIT

== page 1 ==
#0 item tx_seq=1 | wm.cursor=item(cp=1,tx=1) wm.cp=0 | end=QUERY_END_REASON_ITEM_LIMIT

== page 2 ==
#0 item tx_seq=2 | wm.cursor=item(cp=1,tx=2) wm.cp=- | end=QUERY_END_REASON_ITEM_LIMIT

== page 3 ==
#0 item tx_seq=3 | wm.cursor=item(cp=1,tx=3) wm.cp=- | end=QUERY_END_REASON_ITEM_LIMIT

== page 4 ==
#0 item tx_seq=4 | wm.cursor=item(cp=3,tx=4) wm.cp=2 | end=QUERY_END_REASON_ITEM_LIMIT

== page 5 ==
#0 item tx_seq=5 | wm.cursor=item(cp=3,tx=5) wm.cp=- | end=QUERY_END_REASON_ITEM_LIMIT

== page 6 ==
#0 item tx_seq=6 | wm.cursor=item(cp=4,tx=6) wm.cp=3 | end=QUERY_END_REASON_ITEM_LIMIT

== page 7 ==
#0 item tx_seq=7 | wm.cursor=item(cp=4,tx=7) wm.cp=- | end=QUERY_END_REASON_ITEM_LIMIT

== page 8 ==
#0 no-item | wm.cursor=boundary(cp=4,tx=8) wm.cp=- | end=QUERY_END_REASON_CURSOR_BOUND
